# llc-func-removal-report

./: Dockerfile  README.md
pass/: CMakeLists.txt  DummyPass.cc
scripts/: build.sh  install_llvm.sh  reproduce.sh
src/: Makefile  dummy_func.c  dummy_func.h  main.c
